Fix spacing for merchant page.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -641,7 +641,7 @@ img-crop {
 }
 
 .list-projects-merchant{
-  height: 90px;
+ padding-bottom: 10px;
 }
 
 .purchase-amount {
